--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "start:watch": "nodemon index.js",
     "test": "jest --verbose --runInBand"
   },
   "repository": {
@@ -19,6 +21,8 @@
   "homepage": "https://github.com/DannySuarez/http#readme",
   "devDependencies": {
     "eslint": "^6.0.1",
-    "jest": "^24.8.0"
+    "jest": "^24.8.0",
+    "nodemon": "^1.19.1",
+    "supertest": "^4.0.2"
   }
 }
