--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "start:watch": "nodemon index.js",
-    "test": "jest --verbose --runInBand"
+    "test": "jest --verbose --runInBand --detectOpenHandles"
   },
   "repository": {
     "type": "git",
